# osloader

./: .gitignore  Cargo.toml  Dockerfile  README.md
config/: .gitignore  pican2.txt
config/home-rpi/: config.txt
config/lar-rpi/: pican2.txt
docs/: book.toml
src/: builroot.rs  cli.rs  config.rs  lib.rs  main.rs  raspi.rs  rpi.rs  terminal.rs  user.rs
src/cmd/: mod.rs  setup.rs
src/display/: hdmic7inch.rs
src/os/: alpine.rs
